--- a/taskapp2/Base.lproj/Main.storyboard
+++ b/taskapp2/Base.lproj/Main.storyboard
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1605" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1605" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BjW-ke-oZj">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="taskapp2" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="ViewController" customModule="taskapp2" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -17,12 +18,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MLi-eS-rrK">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MLi-eS-rrK">
                                 <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
-                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="co6-I7-BMX"/>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Yjx-dT-egC"/>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="9C7-rs-G9C"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Xoa-Pn-Jp5"/>
                                 </connections>
                             </tableView>
                         </subviews>
@@ -34,9 +35,118 @@
                             <constraint firstItem="MLi-eS-rrK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="zhv-FF-nTs"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="FYQ-DU-E6n">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Pxf-nf-ZDd">
+                            <connections>
+                                <segue destination="IjL-KW-Cmi" kind="show" id="fhh-qQ-7bZ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="MLi-eS-rrK" id="nmw-Uc-zeJ"/>
+                        <segue destination="IjL-KW-Cmi" kind="show" identifier="cellSegue" id="OZR-09-fRK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1017" y="-366"/>
+        </scene>
+        <!--Input View Controller-->
+        <scene sceneID="K3n-zw-S2i">
+            <objects>
+                <viewController id="IjL-KW-Cmi" customClass="InputViewController" customModule="taskapp2" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Mbt-z6-Zv3"/>
+                        <viewControllerLayoutGuide type="bottom" id="Etl-UH-AhB"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="NZy-cQ-mAg" customClass="I">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="タイトル" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JRc-yM-yYw">
+                                <rect key="frame" x="20" y="94" width="68" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="内容" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DtL-r1-UNN">
+                                <rect key="frame" x="20" y="165" width="34" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tmh-B4-wY7">
+                                <rect key="frame" x="20" y="125" width="560" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="hqL-ga-39f">
+                                <rect key="frame" x="20" y="196" width="560" height="120"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="a8h-Xl-UJD"/>
+                                </constraints>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="5rM-gW-0GP">
+                                <rect key="frame" x="20" y="326" width="560" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="wwU-Nx-Mo4"/>
+                                </constraints>
+                                <date key="date" timeIntervalSinceReferenceDate="478856474.41480303">
+                                    <!--2016-03-05 07:41:14 +0000-->
+                                </date>
+                            </datePicker>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="hqL-ga-39f" firstAttribute="top" secondItem="DtL-r1-UNN" secondAttribute="bottom" constant="10" id="0bg-wD-vqr"/>
+                            <constraint firstItem="5rM-gW-0GP" firstAttribute="top" secondItem="hqL-ga-39f" secondAttribute="bottom" constant="10" id="7hv-EY-uo0"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="hqL-ga-39f" secondAttribute="trailing" id="9Tj-C3-GRP"/>
+                            <constraint firstItem="5rM-gW-0GP" firstAttribute="leading" secondItem="NZy-cQ-mAg" secondAttribute="leadingMargin" id="FmR-Rk-naA"/>
+                            <constraint firstItem="hqL-ga-39f" firstAttribute="leading" secondItem="NZy-cQ-mAg" secondAttribute="leadingMargin" id="GKK-wM-MIa"/>
+                            <constraint firstItem="JRc-yM-yYw" firstAttribute="leading" secondItem="NZy-cQ-mAg" secondAttribute="leadingMargin" id="J7a-AF-CTe"/>
+                            <constraint firstItem="DtL-r1-UNN" firstAttribute="top" secondItem="tmh-B4-wY7" secondAttribute="bottom" constant="10" id="OdE-06-DKP"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="tmh-B4-wY7" secondAttribute="trailing" id="dKX-t6-8ob"/>
+                            <constraint firstItem="5rM-gW-0GP" firstAttribute="trailing" secondItem="NZy-cQ-mAg" secondAttribute="trailingMargin" id="koP-nQ-rT5"/>
+                            <constraint firstItem="tmh-B4-wY7" firstAttribute="top" secondItem="JRc-yM-yYw" secondAttribute="bottom" constant="10" id="oOt-uq-ez1"/>
+                            <constraint firstItem="JRc-yM-yYw" firstAttribute="top" secondItem="Mbt-z6-Zv3" secondAttribute="bottom" constant="74" id="t2A-oa-uwl"/>
+                            <constraint firstItem="tmh-B4-wY7" firstAttribute="leading" secondItem="NZy-cQ-mAg" secondAttribute="leadingMargin" id="tXR-fO-WNB"/>
+                            <constraint firstItem="DtL-r1-UNN" firstAttribute="leading" secondItem="NZy-cQ-mAg" secondAttribute="leadingMargin" id="txI-9j-bfj"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="contentsTextView" destination="hqL-ga-39f" id="rlp-5V-MFi"/>
+                        <outlet property="datePicker" destination="5rM-gW-0GP" id="ARD-Ii-VhZ"/>
+                        <outlet property="titleTextField" destination="tmh-B4-wY7" id="dE9-dP-6Vq"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nmR-S1-fyk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1716" y="-366"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="KZD-U3-RCF">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="BjW-ke-oZj" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="aPn-8X-Wg3">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="J8T-83-jhF"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7xE-CE-5Y4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="354" y="-366"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="OZR-09-fRK"/>
+    </inferredMetricsTieBreakers>
 </document>
